syntax = "proto3";

option java_package = "br.com.paraibike.protofiles";
package paraibike;

option java_multiple_files = true;

message Bicicleta {
  int32 id = 1;
  string codigo = 2;
  string marca = 3;
  string estado = 4;
  string valorPorHora = 5;
  int32 usuarioId = 6;
}

message Usuario {
  int32 id = 1;
}

message Bicicletas {
  repeated Bicicleta bicicletas = 1;
}

message Aluguel {
  int32 id = 1;
  string data = 2;
  int32 quantidadeHoras = 3;
  string status = 4;
  string valor = 5;
  int32 usuarioId = 6;
  Bicicleta bicicleta = 7;
}

message Alugueis {
  repeated Aluguel aluguel = 1;
}

message NoContent {}

message Feedback {
  string message = 1;
}

service BicicletaService {
  rpc find_bicicleta(Bicicleta) returns (Bicicleta) {}
  rpc list_bicicletas(NoContent) returns (Bicicletas) {}
  rpc list_bicicletas_by_locador(Usuario) returns (Bicicletas) {}
  rpc create_bicicleta(Bicicleta) returns (Bicicleta) {}
  rpc update_bicicleta(Bicicleta) returns (Bicicleta) {}
  rpc inactivate_bicicleta(Bicicleta) returns (Feedback) {}
}

service AluguelService {
  rpc find_aluguel(Aluguel) returns (Aluguel) {}
  rpc list_alugueis(NoContent) returns (Alugueis) {}
  rpc create_aluguel(Aluguel) returns (Aluguel) {}
  rpc update_aluguel(Aluguel) returns (Aluguel) {}
  rpc cancel_aluguel(Aluguel) returns (Feedback) {}
}